--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <label for="name">Full Name:</label>
         <input type="text" id="name" name="name" required><br><br>
 
+        <label for="lastname">last Name:</label>
+        <input type="text" id="lastname" name="name" required><br><br>
+
         <label for="address">Address:</label>
         <input type="text" id="address" name="address" required><br><br>
 
