--- a/index.html
+++ b/index.html
@@ -9,21 +9,7 @@
 <body>
     <h1>Fill the Form to Generate a Slip</h1>
 
-    <form id="slipForm">
-        <label for="name">Full Name:</label>
-        <input type="text" id="name" name="name" required><br><br>
-
-        <label for="lastname">last Name:</label>
-        <input type="text" id="lastname" name="name" required><br><br>
-
-        <label for="address">Address:</label>
-        <input type="text" id="address" name="address" required><br><br>
-
-        <label for="amount">Amount:</label>
-        <input type="number" id="amount" name="amount" required><br><br>
-
-        <button type="button" onclick="generatePDF()">Generate Slip</button>
-    </form>
+    <h1>Ahmed Shahid COME HERE</h1>
 
     <script>
         function generatePDF() {
