--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-    <h1>Fill the Form to Generate a Slip</h1>
-
-    <h1>Ahmed Shahid COME HERE</h1>
+    <h1>Ahmed Shahid Devops Engineer</h1>
 
     <script>
         function generatePDF() {
